# libtoast

./: CMakeLists.txt  README.md
include/libtoast/: libtoast.h
src/: container.c  meta.c  openclose.c
tests/: CMakeLists.txt  dmyfile.toa
tests/metadata/: CMakeLists.txt  metatest.c
tests/signature/: CMakeLists.txt  signtest.c
