# Copyright (c) 2021. kms1212(Min Su Kwon)
# This file is part of libtoast.
# 
# libtoast and its source code is published over BSD 3-Clause License.
# See the BSD-3-Clause for more details.
# <https://raw.githubusercontent.com/kms1212/libtoast/main/LICENSE>

cmake_minimum_required(VERSION 3.12)

add_subdirectory(signature)
add_subdirectory(metadata)